# pyflink-fraud-detection-lab

./: README.md  main.py  pyproject.toml  前端数据接口设计文档.md
.claude/: settings.local.json
src/code/: class10_ecomm_datastream.py  class10_server.py  create_tables.py  data_generator.py
src/code/static/: app.js  index.html  style.css
