[project]
name = "pyflink-fraud-detection-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-flink==1.18.1",
    "apache-beam==2.48.0",
    "pyarrow>=10,<12",
    "protobuf>=4.23,<5",
    "grpcio>=1.56",
    "kafka-python>=2.0",
    "setuptools>=60.0",
    "dill>=0.3.1.1",
    "faker>=20.0.0",
    "pymysql>=1.0.0",
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=10.0",
    "setuptools>=60.0,<70.0",
    "starlette>=1.0.0",
]
